ft/adds document upload
adds http.endpoint
replaces net/http with gin as gateway
moves gateway server into separate package
